--- a/wiki/gujemssdkandroid.wiki
+++ b/wiki/gujemssdkandroid.wiki
@@ -19,6 +19,8 @@ Android SDK change history and downloads
 == Changelog ==
 
 ||*Version*      ||*Loginformation*||
+||v 1.4.0.1||Bugfix: issue with start interstitial||
+|| ||Bugfix: native ListAdViews without requests||
 ||v 1.4||Compatibility with Android SDK Tools 23.0.5||
 || ||Compatibility with Android SDK Platform-tools 21.0.0||
 || ||Compatibility with Android 5.0 ("Lollipop", API21) and lower (>=API8)||
